// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamoDBStreamHandler should index new projektis successfully 1`] = `
Object {
  "aktiivinen": true,
  "asiatunnus": "ELY/2/2022",
  "maakunnat": Array [
    1,
    6,
  ],
  "muokkaajat": Array [
    "A123",
    "A000111",
  ],
  "nimi": "Testiprojekti 2",
  "paivitetty": "2022-03-15T14:30:00.000Z",
  "projektiTyyppi": "TIE",
  "projektipaallikko": "Pekka Projari",
  "saame": false,
  "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
  "vaihe": "ALOITUSKUULUTUS",
  "vaylamuoto": Array [
    "tie",
  ],
  "viimeisinJulkaisu": "2022-03-28T14:28",
}
`;

exports[`dynamoDBStreamHandler should index new projektis successfully 2`] = `
Object {
  "hankkeenKuvaus": "Suunnittelu kohde on osa Hyvinkää-Hanko sähköistyshanketta, jossa toteutetaan myös tasoristeysten toimenpiteitä. Hyväksytyssä ratasuunnitelmassa kyseisessä kohdassa on hyväksytty suunnitelmaratkaisuna Kisan seisakkeen ja Leksvallin tasoristeysten poistaminen parantamalla Helmströmin tasoristeyksen kohdalle uusi tasoristeys. Nyt käynnistetään Rata-suunnitelman päivitys kyseisessä kohdassa ja suunnitellaan kaikkien kolmen tasoristeyksen poistaminen uudella Leksvallin ylikulkusillalla.",
  "kunnat": Array [
    491,
    178,
    740,
  ],
  "maakunnat": Array [
    1,
    6,
  ],
  "nimi": "Testiprojekti 2",
  "paivitetty": "2022-03-15T14:30:00.000Z",
  "projektiTyyppi": "TIE",
  "publishTimestamp": "2022-03-28T14:28:00+03:00",
  "saame": false,
  "vaihe": "ALOITUSKUULUTUS",
  "vaylamuoto": Array [
    "tie",
  ],
  "viimeinenTilaisuusPaattyy": undefined,
  "viimeisinJulkaisu": "2022-03-28T14:28",
}
`;

exports[`dynamoDBStreamHandler should index new projektis successfully 3`] = `
Object {
  "hankkeenKuvaus": "Designplatsen är en del av elektrifieringsprojektet Hyvinge-Hangö, som också kommer att genomföra plankorsningsåtgärder. I den fastställda spårplanen är borttagandet av tävlingsstoppet och Leksvallskorsningen genom förbättring av en ny plankorsning vid Helmströms plankorsning vid denna punkt godkänd som planlösning. En uppdatering av Spårplanen kommer nu att lanseras då och man planerar att ta bort alla tre plankorsningarna på den nya Leksvallsöverfarten.",
  "kunnat": Array [
    491,
    178,
    740,
  ],
  "maakunnat": Array [
    1,
    6,
  ],
  "nimi": "Marikas testprojekt",
  "paivitetty": "2022-03-15T14:30:00.000Z",
  "projektiTyyppi": "TIE",
  "publishTimestamp": "2022-03-28T14:28:00+03:00",
  "saame": false,
  "vaihe": "ALOITUSKUULUTUS",
  "vaylamuoto": Array [
    "tie",
  ],
  "viimeinenTilaisuusPaattyy": undefined,
  "viimeisinJulkaisu": "2022-03-28T14:28",
}
`;

exports[`dynamoDBStreamHandler should index projekti updates successfully 1`] = `
Object {
  "aktiivinen": true,
  "asiatunnus": "ELY/2/2022",
  "maakunnat": Array [
    1,
    6,
  ],
  "muokkaajat": Array [
    "A123",
    "A000111",
  ],
  "nimi": "Testiprojekti 2",
  "paivitetty": "2022-03-15T14:30:00.000Z",
  "projektiTyyppi": "TIE",
  "projektipaallikko": "Pekka Projari",
  "saame": false,
  "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
  "vaihe": "ALOITUSKUULUTUS",
  "vaylamuoto": Array [
    "tie",
  ],
  "viimeisinJulkaisu": "2022-03-28T14:28",
}
`;

exports[`dynamoDBStreamHandler should index projekti updates successfully 2`] = `
Array [
  Array [
    "2_aloitusKuulutus_SUOMI_2022-03-28T14:28",
    Object {
      "date": "2022-03-28T14:28:00+03:00",
      "elyt": Array [
        "ely/ely07",
      ],
      "kieli": "SUOMI",
      "kunnat": Array [
        491,
        178,
        740,
      ],
      "lelyt": Array [
        "ely/ely08",
        "ely/ely08",
        "ely/ely08",
      ],
      "maakunnat": Array [
        1,
        6,
      ],
      "oid": "2",
      "title": "Kuulutus suunnittelun aloittamisesta: Testiprojekti 2",
      "type": "Kuulutus",
      "url": "https://localhost:3000/suunnitelma/2/aloituskuulutus",
      "vaylamuoto": Array [
        "tie",
      ],
    },
  ],
  Array [
    "2_aloitusKuulutus_RUOTSI_2022-03-28T14:28",
    Object {
      "date": "2022-03-28T14:28:00+03:00",
      "elyt": Array [
        "ely/ely07",
      ],
      "kieli": "RUOTSI",
      "kunnat": Array [
        491,
        178,
        740,
      ],
      "lelyt": Array [
        "ely/ely08",
        "ely/ely08",
        "ely/ely08",
      ],
      "maakunnat": Array [
        1,
        6,
      ],
      "oid": "2",
      "title": "Kungörelse om inledande av planering: Marikas testprojekt",
      "type": "Kuulutus",
      "url": "https://localhost:3000/sv/suunnitelma/2/aloituskuulutus",
      "vaylamuoto": Array [
        "tie",
      ],
    },
  ],
]
`;

exports[`dynamoDBStreamHandler should reindex the database successfully 1`] = `
Object {
  "aktiivinen": true,
  "asiatunnus": "ELY/2/2022",
  "maakunnat": Array [
    1,
    6,
  ],
  "muokkaajat": Array [
    "A123",
    "A000111",
  ],
  "nimi": "Testiprojekti 2",
  "paivitetty": "2022-03-15T14:30:00.000Z",
  "projektiTyyppi": "TIE",
  "projektipaallikko": "Pekka Projari",
  "saame": false,
  "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
  "vaihe": "ALOITUSKUULUTUS",
  "vaylamuoto": Array [
    "tie",
  ],
  "viimeisinJulkaisu": "2022-03-28T14:28",
}
`;

exports[`dynamoDBStreamHandler should reindex the database successfully 2`] = `
Array [
  Array [
    "2_aloitusKuulutus_SUOMI_2022-03-28T14:28",
    Object {
      "date": "2022-03-28T14:28:00+03:00",
      "elyt": Array [
        "ely/ely07",
      ],
      "kieli": "SUOMI",
      "kunnat": Array [
        491,
        178,
        740,
      ],
      "lelyt": Array [
        "ely/ely08",
        "ely/ely08",
        "ely/ely08",
      ],
      "maakunnat": Array [
        1,
        6,
      ],
      "oid": "2",
      "title": "Kuulutus suunnittelun aloittamisesta: Testiprojekti 2",
      "type": "Kuulutus",
      "url": "https://localhost:3000/suunnitelma/2/aloituskuulutus",
      "vaylamuoto": Array [
        "tie",
      ],
    },
  ],
  Array [
    "2_aloitusKuulutus_RUOTSI_2022-03-28T14:28",
    Object {
      "date": "2022-03-28T14:28:00+03:00",
      "elyt": Array [
        "ely/ely07",
      ],
      "kieli": "RUOTSI",
      "kunnat": Array [
        491,
        178,
        740,
      ],
      "lelyt": Array [
        "ely/ely08",
        "ely/ely08",
        "ely/ely08",
      ],
      "maakunnat": Array [
        1,
        6,
      ],
      "oid": "2",
      "title": "Kungörelse om inledande av planering: Marikas testprojekt",
      "type": "Kuulutus",
      "url": "https://localhost:3000/sv/suunnitelma/2/aloituskuulutus",
      "vaylamuoto": Array [
        "tie",
      ],
    },
  ],
]
`;

exports[`dynamoDBStreamHandler should reindex the database successfully on maintenance event 1`] = `
Object {
  "Entries": Array [
    Object {
      "Id": "00000001-94d4-4a05-ae90-ef6b01e9c076",
      "MessageBody": "{\\"action\\":\\"index\\",\\"oid\\":\\"1\\"}",
    },
    Object {
      "Id": "00000002-94d4-4a05-ae90-ef6b01e9c076",
      "MessageBody": "{\\"action\\":\\"index\\",\\"oid\\":\\"2\\"}",
    },
  ],
  "QueueUrl": "mockedIndexerSQSUrl",
}
`;

exports[`dynamoDBStreamHandler should reindex the database successfully on maintenance event 2`] = `
Object {
  "Entries": Array [
    Object {
      "Id": "00000003-94d4-4a05-ae90-ef6b01e9c076",
      "MessageBody": "{\\"action\\":\\"index\\",\\"oid\\":\\"5\\"}",
    },
  ],
  "QueueUrl": "mockedIndexerSQSUrl",
}
`;
